<resources>
    <string name="app_name">Canteen app NTAG424</string>
    <string name="app_version">0.0.1</string>
    <string name="home_description">This application is a sample app showing how to use a NTAG424DNA tag for a canteen application.\n\nAdditionally the app shows how to work with encrypted data that needs decryption.</string>
    <string name="home_fragments">There are 5 icons to click on:\n1 home = this page\n2 read NDEF message\n3 personalize = run all necessary steps to activate UID mirroring without user interaction\n4 activate the mirroring of data\n5 write the NDEF template to the tag\n\nNote: This app is working with tag types NTAG213, NTAG215 or NTAG216 only !</string>
    <string name="header_read">This app reads an NDEF message</string>
    <string name="description_read">This example expects a NTAG424DNA tag.\n\nWhen a tag is discovered the data from all records will be read.</string>
    <string name="nfc_result">NFC read result</string>
    <string name="action_licenses">Used material and their licenses</string>
    <string name="header_ndef_settings">NDEF message settings</string>
    <string name="description_ndef_settings">Writes the NDEF message template to the NTAG with defined placeholders for UID, read counter and MAC.\n\nThis is working on tag types NTAG213, 215 or 216 only.</string>
    <string name="description_ndef_settings_2">There are 2 steps to do:\n1. press the TEST AND SAVE NDEF SETTINGS button\n2. tap a NTAG21x tag to the reader</string>
    <string name="header_activate">Activate the mirroring of data to NDEF message</string>
    <string name="description_activate">Activates the mirroring of data (UID, read counter and MAC) in an NDEF message on tapping</string>
    <string name="description_activate_rg">choose your action</string>
    <string name="header_personalize_tag">Personalize a tag for Canteen application</string>
    <string name="description_personalize_tag">This are the steps that will run when a tag is tapped\n\n
        1. write the NDEF compatibility container to file 00\n
        2. write the NDEF template to file 02\n
        3. write the card holders name and ID to file 01\n
        4. write the Virtual Value file to file 01\n
        5. write the Virtual Cyclic Records File to file 01\n
        6. set application keys</string>
    <string name="warning_personalize_tag">The app will IMMEDIATELY write to an attached tag without any further confirmation !</string>
    <string name="header_backup">Backup and Restore settings</string>
    <string name="description_backup">Write the settings to a binary file or restores the settings from a binary file (located in external storage like Downloads folder).\nRestoring will overwrite existing settings without further confirmation.</string>
    <string name="description_backup_rg">Chose your action</string>
    <string name="header_bulk">Bulk registration of tags</string>
    <string name="description_bulk">Register tags for backend server using an export file</string>
    <string name="description_bulk_rg">rg inf</string>
    <string name="header_charge">Charge a canteen card</string>
    <string name="description_charge">(Re-) charge (credit) a canteen card with a maximum of 99999 units (999,99 USD)</string>
    <string name="description_charge_2">Note: the amount is immediately credited when tapping a tag to the NFC reader</string>
    <string name="warning_charge_tag">Note: the amount is immediately credited when tapping a tag to the NFC reader</string>

</resources>